feat: new profession field

--- a/app/views/decidim/extra_user_fields/_profile_form.html.erb
+++ b/app/views/decidim/extra_user_fields/_profile_form.html.erb
@@ -13,6 +13,10 @@
   <%= f.text_field :postal_code %>
 <% end %>
 
+<% if current_organization.activated_extra_field?(:profession) %>
+  <%= f.text_field :profession %>
+<% end %>
+
 <%# Block ExtraUserFields AccountFormFields %>
 
 <%# EndBlock %>
