--- a/app/views/decidim/extra_user_fields/_registration_form.html.erb
+++ b/app/views/decidim/extra_user_fields/_registration_form.html.erb
@@ -41,6 +41,18 @@
         </div>
       <% end %>
 
+      <% if current_organization.activated_extra_field?(:profession) %>
+        <div class="field">
+          <%= f.text_field :profession %>
+        </div>
+      <% end %>
+
+      <% if current_organization.activated_extra_field?(:document_id) %>
+        <div class="field">
+          <%= f.text_field :document_id %>
+        </div>
+      <% end %>
+
       <%# Block ExtraUserFields SignUpFormFields %>
 
       <%# EndBlock %>
