--- a/app/views/decidim/extra_user_fields/admin/extra_user_fields/_form.html.erb
+++ b/app/views/decidim/extra_user_fields/admin/extra_user_fields/_form.html.erb
@@ -23,6 +23,7 @@
     <%= render partial: "decidim/extra_user_fields/admin/extra_user_fields/fields/phone_number", locals: { form: form } %>
     <%= render partial: "decidim/extra_user_fields/admin/extra_user_fields/fields/location", locals: { form: form } %>
     <%= render partial: "decidim/extra_user_fields/admin/extra_user_fields/fields/profession", locals: { form: form } %>
+    <%= render partial: "decidim/extra_user_fields/admin/extra_user_fields/fields/document_id_name", locals: { form: form } %>
     <%= render partial: "decidim/extra_user_fields/admin/extra_user_fields/fields/document_id", locals: { form: form } %>
     <%# Block ExtraUserFields ExtraFields %>
 
